Changelog
=========

2.1.2 (unreleased)
------------------

- Do not attend documents from a cancelled dossier, in the earliest enddate calculation.
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- ResolveConditions: Validate the endate of the main dossier, not till the archive form is displayed.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525
  [phgross]

- Fixed Templatedossier: create a newfile NamedFile object with the same data, instead of set only a reference.
  Issue #1368 Bearbeitung von Vorlagen (Metadaten und Dokumente)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1368/
  [phgross]


2.1.1 (2012-06-22)
------------------

- Templatedossier: Adjust edit permission, normal user should not have the right to edit.
  [phgross]

- Templatedossier: Adjust translations.
  [phgross]


2.1 (2012-06-21)
------------------

- Templatedossier: Disalbe some columns in the document and trash listings.
  [phgross]

- Templatedossier: Adjust default value setter, works now also for boolean fields (preserved_as_paper).
  [phgross]

- Fixed earliest enddate calculation: include objs in subdossiers.
  Issue #1525 Dossier abschliessen: Wieder eroeffnen bzw. wieder abschliessen bei Subdossier.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1525/
  [phgross]

- Implements start date validation in the ResolveConiditions.
  Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
  [phgross]

- Issue #1512 Auswahl exportieren: Sortieren nach Ablagenr. funktioniert nicht
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1512