@@ -4,7 +4,8 @@ Changelog
 2.1.2 (unreleased)
 ------------------
 
-- Do not attend documents from a cancelled dossier, in the earliest enddate calculation.
+- Made recursive_resolve safe: works now also with cancelled subdossiers.
+  Do not attend documents from a cancelled dossier, in the earliest enddate calculation.
   Issue #1546 DI-KSA: Fehlermeldung beim Versuch "Dossier abschliessen"
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1546
   [phgross]
